Test/Int/DvdTimeout.expected
Test/Int/DvdTimeout.lean:13:4: error: something went wrong.
stdout:

stderr:
cvc5 interrupted by timeout.
